--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="authLoading || configLoading">Loading...</div>
 <div *ngIf="!authLoading && !configLoading">
-  Genre:
-  <select [(ngModel)]="selectedGenre" (ngModelChange)="setGenre($event)">
-    <option [value]=""></option>
-    <option [value]="genre" *ngFor="let genre of genres">
-      {{ genre }}
-    </option>
-  </select>
+  <div>
+    <h1>Audle</h1>
+  </div>
+  <div>
+    Card:
+    <h3> How to play</h3>
+    <p>this is how you play our game!</p>
+    <button>Play</button>
+  </div>
 </div>
