--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,3 +10,25 @@
     <button>Play</button>
   </div>
 </div>
+
+<div
+  style="
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20vh;
+  "
+>
+
+  <div *ngIf="loadRandomSong">
+    <h2>Random Song</h2>
+    <p><strong>Title:</strong> {{ randomSong.name }}</p>
+    <p><strong>Artist:</strong> {{ randomSong.artists[0].name }}</p>
+    <p><strong>Album:</strong> {{ randomSong.album.name }}</p>
+    <audio controls>
+      <source [attr.src]="randomSong.preview_url" type="audio/mpeg">
+    </audio>
+    <p><strong>Preview Url:</strong> {{ randomSong.preview_url }}</p>
+  </div>
+</div>
+
