--- a/src/app/components/settings/settings.component.css
+++ b/src/app/components/settings/settings.component.css
@@ -1,18 +1,7 @@
 /* styles.css */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    transition: background-color 0.3s, color 0.3s;
-}
 
 .settings {
-    background-color: #fff;
+    background-color: #d0efb1;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -40,8 +29,8 @@ body {
 }
 
 .option.active {
-    background-color: #007bff;
-    color: #fff;
+    background-color: #B6A39E;
+    color: #1e1e1e;
 }
 
 .theme-toggle {
@@ -53,38 +42,13 @@ button {
     cursor: pointer;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
-    color: white;
+    background-color: #B6A39E;
+    color: rgb(26, 26, 26);
     transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #978783;
 }
 
-/* Dark mode styles */
-body.dark-mode {
-    background-color: #121212;
-    color: #ffffff;
-}
 
-body.dark-mode .settings {
-    background-color: #1e1e1e;
-    color: #ffffff;
-}
-
-body.dark-mode .option:hover {
-    background-color: #333333;
-}
-
-body.dark-mode .option.active {
-    background-color: #4a90e2;
-}
-
-body.dark-mode button {
-    background-color: #4a90e2;
-}
-
-body.dark-mode button:hover {
-    background-color: #357ab8;
-}
