--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,13 @@
 .home{
-    position: absolute;
-    background-color: rgb(105, 158, 25);
+    background-color: #b3d89c;
+    border-radius: 20px;
+    padding: 20px;
 }
 
 .home-card{
+    background-color: #d0efb1;
     border-radius: 20px;
+    padding: 20px;
 }
 
 .backdrop{
@@ -12,7 +15,7 @@
     left: 0;
     top: 0;
     height: 100vh;
-    width: 68vm;
+    width: 68vw;
     cursor: pointer;
     background: rgba(0, 0, 0, 0.5);
 }
