--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,16 +15,7 @@
 <app-settings *ngIf="isSettingsOpen" (closeSettings)="closeSettings()"></app-settings>
 
 
-<div
-  style="
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20vh;
-  "
->
-
-<div *ngIf="randomSong">
+<!-- <div *ngIf="randomSong">
   <h2>Random Song</h2>
   <p><strong>Title:</strong> {{ randomSong.name }}</p>
   <p><strong>Artist:</strong> {{ randomSong.artists[0]?.name }}</p>
@@ -33,7 +24,11 @@
     <source [src]="randomSong.preview_url + '?t=' + timestamp" type="audio/mpeg">
   </audio>
   <p><strong>Preview Url:</strong> {{ randomSong.preview_url }}</p>
-</div>
+</div> -->
+
+<app-game [tracks] = "tracks">
+
+</app-game>
 
 
 <!-- https://p.scdn.co/mp3-preview/bf226d38169446d873b9dac09ed4b7918bac5cf0?cid=74f434552d40467782bc1bc64b12b2e9 -->
