--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,13 @@
-<p>nav-bar works!</p>
+<nav class="navbar">
+    <div class="container">
+        <a routerLink="/" class="navbar-brand">MyApp</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a routerLink="/" routerLinkActive="active" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="/leaderboard" routerLinkActive="active" class="nav-link">Leaderboard</a>
+            </li>
+        </ul>
+    </div>
+</nav>
