adjust global styling and moved to components

--- a/src/app/components/leaderboard/leaderboard.component.css
+++ b/src/app/components/leaderboard/leaderboard.component.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f4f4f9;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .leaderboard {
@@ -12,7 +11,7 @@
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    width: 80%;
+    width: 90%;
     max-width: 600px;
     text-align: center;
     margin: 0 auto;
@@ -25,34 +24,52 @@
     font-size: 2em;
 }
 
-table {
+.leaderboard-table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
 
-th,
-td {
+.leaderboard-th,
+.leaderboard-td {
     padding: 15px;
     border: 1px solid #ddd;
     text-align: center;
     transition: background-color 0.3s;
 }
 
-th {
+.leaderboard-th {
     background-color: #6c757d;
     color: #fff;
     font-weight: bold;
 }
 
-tbody tr:nth-child(even) {
+.leaderboard-tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
-tbody tr:hover {
+.leaderboard-tr:hover {
     background-color: #f1f1f1;
 }
 
-tbody tr td {
+.leaderboard-td {
     color: #555;
+}
+
+/* Dark mode styles */
+body.dark-mode .leaderboard {
+    background-color: #3e3e3e;
+    color: #ffffff;
+}
+
+body.dark-mode .leaderboard-th {
+    background-color: #444;
+}
+
+body.dark-mode .leaderboard-tr:nth-child(even) {
+    background-color: #555;
+}
+
+body.dark-mode .leaderboard-td {
+    color: #fff;
 }
