--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -1,19 +1,19 @@
 <div class="leaderboard-container">
     <div class="leaderboard">
         <h1>Leaderboard</h1>
-        <table>
+        <table class="leaderboard-table">
             <thead>
                 <tr>
-                    <th>Rank</th>
-                    <th>Name</th>
-                    <th>Score</th>
+                    <th class="leaderboard-th">Rank</th>
+                    <th class="leaderboard-th">Name</th>
+                    <th class="leaderboard-th">Score</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let entry of leaderboardEntries; let i = index">
-                    <td>{{ i + 1 }}</td>
-                    <td>{{ entry.name }}</td>
-                    <td>{{ entry.score }}</td>
+                <tr class="leaderboard-tr" *ngFor="let entry of leaderboardEntries; let i = index">
+                    <td class="leaderboard-td">{{ i + 1 }}</td>
+                    <td class="leaderboard-td">{{ entry.name }}</td>
+                    <td class="leaderboard-td">{{ entry.score }}</td>
                 </tr>
             </tbody>
         </table>
