--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="container">
-        <a routerLink="/" class="navbar-brand">MyApp</a>
+        <a routerLink="/" class="navbar-brand">Audle</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a routerLink="/" routerLinkActive="active" class="nav-link">Home</a>
@@ -9,5 +9,7 @@
                 <a routerLink="/leaderboard" routerLinkActive="active" class="nav-link">Leaderboard</a>
             </li>
         </ul>
+        <button class="settings-button" (click)="toggleSettings()">Settings</button>
     </div>
+    <app-settings *ngIf="isSettingsOpen" (closeSettings)="closeSettings()"></app-settings>
 </nav>
