--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
 
 <!-- home.component.html -->
 <div>
-  <app-game></app-game> <!-- Ensure the selector matches 'app-game' -->
+  <app-game></app-game> 
 </div>
 
 
