replay button refreshes page

--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -65,6 +65,6 @@
 
   <div *ngIf="isGameOver">
     <h2>{{ gameOverMessage }}</h2>
-    <button (click)="resetGame()">Play Again</button>
+    <button (click)="refresh()">Play Again</button>
   </div>
 </div>
