--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,31 +1,3 @@
-<!--
-<div *ngIf="tracks">
-    <h2>Random Song 1</h2>
-    <p><strong>Title:</strong> {{ tracks[0].name }}</p>
-    <p><strong>Artist:</strong> {{ tracks[0].artists[0]?.name }}</p>
-    <p><strong>Album:</strong> {{ tracks[0].album?.name }}</p>
-    <audio controls *ngIf="tracks.preview_url">
-      <source [src]="tracks.preview_url + '?t=' + timestamp" type="audio/mpeg">
-    </audio>
-    <p><strong>Preview Url:</strong> {{ tracks[0].preview_url }}</p>
-</div> -->
-  
-<!-- dropdown.component.html 
-<div class="dropdown">
-  <button class="dropdown-toggle">
-    {{ selectedItem }}
-  </button>
-  <div class="dropdown-menu">
-    <a
-      class="dropdown-item"
-      *ngFor="let item of items"
-      (click)="onSelect(item)"
-      >{{ item }}</a
-    >
-  </div>
-</div>
--->
-
 <div>
   <div class="audio-dropdown-container">
     <div class="audio-row">
@@ -67,4 +39,8 @@
     <h2>{{ gameOverMessage }}</h2>
     <button (click)="refresh()">Play Again</button>
   </div>
+  <app-settings *ngIf="isGameOver"></app-settings>
 </div>
+
+<app-settings *ngIf="isGameOver" score="score"></app-settings>
+
