--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,9 +1,15 @@
 .navbar {
+    overflow: hidden;
+    position: absolute;
+    left: 0%;
+    right: 0;
+    top: 0;
+    width: 100;
     background-color: #333;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items:center;
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -51,7 +57,7 @@
     cursor: pointer;
     font-size: 1.1em;
     transition: color 0.3s;
-    margin-left: 20px;
+    margin-right: 25px;
 }
 
 .settings-button:hover {
