--- a/src/app/components/gameover/gameover.component.html
+++ b/src/app/components/gameover/gameover.component.html
@@ -1,2 +1,7 @@
-<p>gameover works!</p>
-
+<div class="modal-overlay">
+  <div>
+      <div class="over-container">
+          <h1>Game Over</h1>
+      </div>
+  </div>
+</div>
