--- a/src/app/components/gameover/gameover.component.html
+++ b/src/app/components/gameover/gameover.component.html
@@ -4,6 +4,6 @@
     <p>Your score is: {{ score }}</p>
     <input type="text" [(ngModel)]="username" placeholder="Enter your username" />
     <button (click)="saveScore()">Save Score</button>
-    <button (click)="closeGameover.emit()">Close</button>
+    <button (click)="close()">Close</button>
   </div>
 </div>
