--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,7 @@
     <p> Green = Correct Song and Position</p>
     <p> Yellow = Correct Song in wrong position</p>
     <p> Red = Incorrect Song</p>
+    <!-- <button (click)="onPlay()"></button> -->
     <a routerLink="/play" routerLinkActive="active" class="nav-link"><button (click)="onPlay()">Play</button></a>
   </div>
 </div>
